# speechlog-mini

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.sh
app/: asr.py  audio_io.py  main.py  normalize_ar.py  schemas.py  vad.py  vas.py
scripts/: prepare_commonvoice_eval.py  run_eval_against_api.py
tests/: test_vas.py
