[project]
name = "speechlog-mini"
version = "0.1.0"
description = ""
authors = [
    {name = "Areen612",email = "areenali98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pydantic (>=2.12.5,<3.0.0)",
    "datasets (>=4.4.2,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numba (>=0.58,<0.59)",
    "llvmlite (>=0.41,<0.42)",
    "soundfile (>=0.13.1,<0.14.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "torchcodec (>=0.9.1,<0.10.0)",
    "torch (>=2.9.1,<3.0.0)",
    "silero-vad (>=6.2.0,<7.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
